"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2006-10-18	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-38:
	  Perm'd RVALUE_LVALUE_LOOKUPS (-60 LoC).


	* HACKT-00-01-04-main-00-80-37:
	  Perm'd RESOLVE_VALUES_WITH_FOOTPRINT (-560 LoC).


	* HACKT-00-01-04-main-00-80-36:
	  This is it, what we've all been waiting for:
	  "Forty-four thousand lines of rotten spaghetti code! 
		GONE! MWAHAHAHAHAHHAAHAHAA!!!!" -- gcc-bugzilla quip
	  Perm'd USE_INSTANCE_PLACEHOLDERS (-5000 LoC).
		Along with it go comments and documentation for the deleted 
		code.  :S  Cleaner code /should/ require fewer comments.


	* HACKT-00-01-04-main-00-80-35:
	  Perm'd USE_RESOLVED_DATA_TYPES and USE_UNRESOLVED_DATA_TYPES, 
		-560 LoC.


	* HACKT-00-01-04-main-00-80-34:
	  Perm'd MODULE_PROCESS (-530 LoC)
		Kiss a significant chunk of dirtily hacked code Goodbye.  


	* HACKT-00-01-04-main-00-80-33:
	  Perm'd ALWAYS_USE_DYNAMIC_PARAM_EXPR_LIST.  (-500 LoC)


	* HACKT-00-01-04-main-00-80-32:
	  Perm'd the disabling of ENABLE_STATIC_ANALYSIS.  (-700 LoC)


	* HACKT-00-01-04-main-00-80-31:
	  First of a series of clean-ups:
	  Perm'd the following switches in "Object/devel_switches.h":
		REF_COUNT_ARRAY_INDICES, REF_COUNT_INSTANCE_MANAGEMENT, 
		SUBSTITUTE_DEFAULT_PARAMETERS (-800 LoC)


2006-10-17	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-30-merged-instance-00-39:
	  Major branch merge.
	  Summary: instance/value_collections separated into placeholder and 
		collection counterpart classes to avoid massive duplication.  
		Scoped spaces now may only include placeholders, 
			whereas footprints include collections.  
		Types: fundamental (unresolved) types are associated
			with placeholders while canonical (resolved)
			types are associated with collections.  